Compilador/y.output
   0  $accept : programa $end

   1  programa : nombre_programa bloque_sentencias

   2  nombre_programa : id
   3                  | cte
   4                  | cadena

   5  bloque_sentencias : '{' sentencia '}'
   6                    | '{' sentencia
   7                    | sentencia '}'

   8  sentencia : declarativa
   9            | ejecutable
  10            | sentencia declarativa
  11            | sentencia ejecutable

  12  declarativa : dec_variables
  13              | dec_funcion

  14  dec_variables : tipo list_variables ';'
  15                | list_variables ';'

  16  tipo : ui8
  17       | f64
  18       | id

  19  list_variables : id
  20                 | list_variables ',' id
  21                 | error

  22  dec_funcion : header_funcion cola_funcion

  23  $$1 :

  24  dec_funcion : header_funcion parametro $$1 cola_funcion

  25  $$2 :

  26  dec_funcion : header_funcion parametro ',' parametro $$2 cola_funcion

  27  header_funcion : fun id '('
  28                 | fun '('

  29  cola_funcion : ')' ':' tipo '{' cuerpo_fun '}'
  30               | error

  31  parametro : tipo id
  32            | tipo

  33  cuerpo_fun : sentencia Return '(' expresion ')' ';'
  34             | sentencia Return '(' expresion ';'
  35             | sentencia Return expresion ';'
  36             | sentencia Return expresion ')' ';'
  37             | sentencia Return expresion
  38             | sentencia Return '(' expresion ')'

  39  ejecutable : inst_ejecutable

  40  $$3 :

  41  ejecutable : defer $$3 inst_ejecutable

  42  inst_ejecutable : asignacion ';'
  43                  | seleccion ';'
  44                  | impresion ';'
  45                  | invocar_fun ';'
  46                  | for_continue

  47  asignacion : id SIMB_ASIGNACION expresion
  48             | id SIMB_ASIGNACION
  49             | id ':' '=' expresion

  50  expresion : expresion '+' termino
  51            | expresion '-' termino
  52            | termino

  53  termino : termino '*' factor
  54          | termino '/' factor
  55          | factor

  56  factor : id
  57         | cte
  58         | '-' cte
  59         | retorno_funcion

  60  retorno_funcion : id '(' ')'
  61                  | id '(' parametro_real ')'
  62                  | id '(' parametro_real ',' parametro_real ')'

  63  parametro_real : id
  64                 | cte
  65                 | '-' cte

  66  seleccion : If condicion_if cuerpo_if

  67  cuerpo_if : then_selec Else else_selecc end_if
  68            | then_selec end_if

  69  then_selec : then '{' ejecutable_for '}'
  70             | then inst_ejecutable_for

  71  else_selecc : '{' ejecutable_for '}'
  72              | inst_ejecutable_for

  73  condicion_if : '(' expresion_booleana ')'

  74  expresion_booleana : expresion comparador expresion

  75  comparador : SIMB_DISTINTO
  76             | SIMB_MAY_IGUAL
  77             | SIMB_MEN_IGUAL
  78             | '='
  79             | '<'
  80             | '>'

  81  impresion : out '(' cadena ')'
  82            | out cadena ')'
  83            | out '(' cadena

  84  invocar_fun : discard retorno_funcion
  85              | retorno_funcion

  86  for_continue : For '(' for_inic ';' for_cond ';' for_act ')' for_cuerpo
  87               | etiqueta For '(' for_inic ';' for_cond ';' for_act ')' for_cuerpo

  88  etiqueta : id ':'

  89  for_inic : id SIMB_ASIGNACION cte

  90  for_cond : id comparador expresion

  91  for_act : mas_o_menos cte
  92          | cte

  93  for_cuerpo : '{' ejecutable_for '}' ';'
  94             | inst_ejecutable_for

  95  mas_o_menos : '+'
  96              | '-'

  97  ejecutable_for : ejecutable_for inst_ejecutable_for
  98                 | inst_ejecutable_for

  99  inst_ejecutable_for : inst_ejecutable
 100                      | Break ';'
 101                      | Break ':' id ';'
 102                      | Continue ';'

state 0
	$accept : . programa $end  (0)

	id  shift 1
	cte  shift 2
	cadena  shift 3
	.  error

	programa  goto 4
	nombre_programa  goto 5


state 1
	nombre_programa : id .  (2)

	.  reduce 2


state 2
	nombre_programa : cte .  (3)

	.  reduce 3


state 3
	nombre_programa : cadena .  (4)

	.  reduce 4


state 4
	$accept : programa . $end  (0)

	$end  accept


state 5
	programa : nombre_programa . bloque_sentencias  (1)

	error  shift 6
	id  shift 7
	If  shift 8
	out  shift 9
	fun  shift 10
	ui8  shift 11
	f64  shift 12
	discard  shift 13
	For  shift 14
	defer  shift 15
	'{'  shift 16
	.  error

	bloque_sentencias  goto 17
	sentencia  goto 18
	declarativa  goto 19
	ejecutable  goto 20
	dec_variables  goto 21
	dec_funcion  goto 22
	tipo  goto 23
	list_variables  goto 24
	header_funcion  goto 25
	inst_ejecutable  goto 26
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	etiqueta  goto 33


state 6
	list_variables : error .  (21)

	.  reduce 21


state 7
	tipo : id .  (18)
	list_variables : id .  (19)
	asignacion : id . SIMB_ASIGNACION expresion  (47)
	asignacion : id . SIMB_ASIGNACION  (48)
	asignacion : id . ':' '=' expresion  (49)
	retorno_funcion : id . '(' ')'  (60)
	retorno_funcion : id . '(' parametro_real ')'  (61)
	retorno_funcion : id . '(' parametro_real ',' parametro_real ')'  (62)
	etiqueta : id . ':'  (88)

	SIMB_ASIGNACION  shift 34
	'('  shift 35
	':'  shift 36
	error  reduce 18
	id  reduce 18
	';'  reduce 19
	','  reduce 19


state 8
	seleccion : If . condicion_if cuerpo_if  (66)

	'('  shift 37
	.  error

	condicion_if  goto 38


state 9
	impresion : out . '(' cadena ')'  (81)
	impresion : out . cadena ')'  (82)
	impresion : out . '(' cadena  (83)

	cadena  shift 39
	'('  shift 40
	.  error


state 10
	header_funcion : fun . id '('  (27)
	header_funcion : fun . '('  (28)

	id  shift 41
	'('  shift 42
	.  error


state 11
	tipo : ui8 .  (16)

	.  reduce 16


state 12
	tipo : f64 .  (17)

	.  reduce 17


state 13
	invocar_fun : discard . retorno_funcion  (84)

	id  shift 43
	.  error

	retorno_funcion  goto 44


state 14
	for_continue : For . '(' for_inic ';' for_cond ';' for_act ')' for_cuerpo  (86)

	'('  shift 45
	.  error


state 15
	ejecutable : defer . $$3 inst_ejecutable  (41)
	$$3 : .  (40)

	.  reduce 40

	$$3  goto 46


state 16
	bloque_sentencias : '{' . sentencia '}'  (5)
	bloque_sentencias : '{' . sentencia  (6)

	error  shift 6
	id  shift 7
	If  shift 8
	out  shift 9
	fun  shift 10
	ui8  shift 11
	f64  shift 12
	discard  shift 13
	For  shift 14
	defer  shift 15
	.  error

	sentencia  goto 47
	declarativa  goto 19
	ejecutable  goto 20
	dec_variables  goto 21
	dec_funcion  goto 22
	tipo  goto 23
	list_variables  goto 24
	header_funcion  goto 25
	inst_ejecutable  goto 26
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	etiqueta  goto 33


state 17
	programa : nombre_programa bloque_sentencias .  (1)

	.  reduce 1


state 18
	bloque_sentencias : sentencia . '}'  (7)
	sentencia : sentencia . declarativa  (10)
	sentencia : sentencia . ejecutable  (11)

	error  shift 6
	id  shift 7
	If  shift 8
	out  shift 9
	fun  shift 10
	ui8  shift 11
	f64  shift 12
	discard  shift 13
	For  shift 14
	defer  shift 15
	'}'  shift 48
	.  error

	declarativa  goto 49
	ejecutable  goto 50
	dec_variables  goto 21
	dec_funcion  goto 22
	tipo  goto 23
	list_variables  goto 24
	header_funcion  goto 25
	inst_ejecutable  goto 26
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	etiqueta  goto 33


state 19
	sentencia : declarativa .  (8)

	.  reduce 8


state 20
	sentencia : ejecutable .  (9)

	.  reduce 9


state 21
	declarativa : dec_variables .  (12)

	.  reduce 12


state 22
	declarativa : dec_funcion .  (13)

	.  reduce 13


state 23
	dec_variables : tipo . list_variables ';'  (14)

	error  shift 6
	id  shift 51
	.  error

	list_variables  goto 52


state 24
	dec_variables : list_variables . ';'  (15)
	list_variables : list_variables . ',' id  (20)

	';'  shift 53
	','  shift 54
	.  error


state 25
	dec_funcion : header_funcion . cola_funcion  (22)
	dec_funcion : header_funcion . parametro $$1 cola_funcion  (24)
	dec_funcion : header_funcion . parametro ',' parametro $$2 cola_funcion  (26)

	error  shift 55
	id  shift 56
	ui8  shift 11
	f64  shift 12
	')'  shift 57
	.  error

	tipo  goto 58
	cola_funcion  goto 59
	parametro  goto 60


state 26
	ejecutable : inst_ejecutable .  (39)

	.  reduce 39


state 27
	inst_ejecutable : asignacion . ';'  (42)

	';'  shift 61
	.  error


state 28
	inst_ejecutable : seleccion . ';'  (43)

	';'  shift 62
	.  error


state 29
	inst_ejecutable : impresion . ';'  (44)

	';'  shift 63
	.  error


state 30
	inst_ejecutable : invocar_fun . ';'  (45)

	';'  shift 64
	.  error


state 31
	inst_ejecutable : for_continue .  (46)

	.  reduce 46


state 32
	invocar_fun : retorno_funcion .  (85)

	.  reduce 85


state 33
	for_continue : etiqueta . For '(' for_inic ';' for_cond ';' for_act ')' for_cuerpo  (87)

	For  shift 65
	.  error


state 34
	asignacion : id SIMB_ASIGNACION . expresion  (47)
	asignacion : id SIMB_ASIGNACION .  (48)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	';'  reduce 48

	expresion  goto 69
	termino  goto 70
	factor  goto 71
	retorno_funcion  goto 72


state 35
	retorno_funcion : id '(' . ')'  (60)
	retorno_funcion : id '(' . parametro_real ')'  (61)
	retorno_funcion : id '(' . parametro_real ',' parametro_real ')'  (62)

	id  shift 73
	cte  shift 74
	')'  shift 75
	'-'  shift 76
	.  error

	parametro_real  goto 77


state 36
	asignacion : id ':' . '=' expresion  (49)
	etiqueta : id ':' .  (88)

	'='  shift 78
	For  reduce 88


state 37
	condicion_if : '(' . expresion_booleana ')'  (73)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	expresion  goto 79
	termino  goto 70
	factor  goto 71
	retorno_funcion  goto 72
	expresion_booleana  goto 80


state 38
	seleccion : If condicion_if . cuerpo_if  (66)

	then  shift 81
	.  error

	cuerpo_if  goto 82
	then_selec  goto 83


state 39
	impresion : out cadena . ')'  (82)

	')'  shift 84
	.  error


state 40
	impresion : out '(' . cadena ')'  (81)
	impresion : out '(' . cadena  (83)

	cadena  shift 85
	.  error


state 41
	header_funcion : fun id . '('  (27)

	'('  shift 86
	.  error


state 42
	header_funcion : fun '(' .  (28)

	.  reduce 28


state 43
	retorno_funcion : id . '(' ')'  (60)
	retorno_funcion : id . '(' parametro_real ')'  (61)
	retorno_funcion : id . '(' parametro_real ',' parametro_real ')'  (62)

	'('  shift 35
	.  error


state 44
	invocar_fun : discard retorno_funcion .  (84)

	.  reduce 84


state 45
	for_continue : For '(' . for_inic ';' for_cond ';' for_act ')' for_cuerpo  (86)

	id  shift 87
	.  error

	for_inic  goto 88


state 46
	ejecutable : defer $$3 . inst_ejecutable  (41)

	id  shift 89
	If  shift 8
	out  shift 9
	discard  shift 13
	For  shift 14
	.  error

	inst_ejecutable  goto 90
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	etiqueta  goto 33


state 47
	bloque_sentencias : '{' sentencia . '}'  (5)
	bloque_sentencias : '{' sentencia .  (6)
	sentencia : sentencia . declarativa  (10)
	sentencia : sentencia . ejecutable  (11)

	error  shift 6
	id  shift 7
	If  shift 8
	out  shift 9
	fun  shift 10
	ui8  shift 11
	f64  shift 12
	discard  shift 13
	For  shift 14
	defer  shift 15
	'}'  shift 91
	$end  reduce 6

	declarativa  goto 49
	ejecutable  goto 50
	dec_variables  goto 21
	dec_funcion  goto 22
	tipo  goto 23
	list_variables  goto 24
	header_funcion  goto 25
	inst_ejecutable  goto 26
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	etiqueta  goto 33


state 48
	bloque_sentencias : sentencia '}' .  (7)

	.  reduce 7


state 49
	sentencia : sentencia declarativa .  (10)

	.  reduce 10


state 50
	sentencia : sentencia ejecutable .  (11)

	.  reduce 11


state 51
	list_variables : id .  (19)

	.  reduce 19


state 52
	dec_variables : tipo list_variables . ';'  (14)
	list_variables : list_variables . ',' id  (20)

	';'  shift 92
	','  shift 54
	.  error


state 53
	dec_variables : list_variables ';' .  (15)

	.  reduce 15


state 54
	list_variables : list_variables ',' . id  (20)

	id  shift 93
	.  error


state 55
	cola_funcion : error .  (30)

	.  reduce 30


state 56
	tipo : id .  (18)

	.  reduce 18


state 57
	cola_funcion : ')' . ':' tipo '{' cuerpo_fun '}'  (29)

	':'  shift 94
	.  error


state 58
	parametro : tipo . id  (31)
	parametro : tipo .  (32)

	id  shift 95
	error  reduce 32
	','  reduce 32
	')'  reduce 32


state 59
	dec_funcion : header_funcion cola_funcion .  (22)

	.  reduce 22


state 60
	dec_funcion : header_funcion parametro . $$1 cola_funcion  (24)
	dec_funcion : header_funcion parametro . ',' parametro $$2 cola_funcion  (26)
	$$1 : .  (23)

	','  shift 96
	error  reduce 23
	')'  reduce 23

	$$1  goto 97


state 61
	inst_ejecutable : asignacion ';' .  (42)

	.  reduce 42


state 62
	inst_ejecutable : seleccion ';' .  (43)

	.  reduce 43


state 63
	inst_ejecutable : impresion ';' .  (44)

	.  reduce 44


state 64
	inst_ejecutable : invocar_fun ';' .  (45)

	.  reduce 45


state 65
	for_continue : etiqueta For . '(' for_inic ';' for_cond ';' for_act ')' for_cuerpo  (87)

	'('  shift 98
	.  error


state 66
	factor : id .  (56)
	retorno_funcion : id . '(' ')'  (60)
	retorno_funcion : id . '(' parametro_real ')'  (61)
	retorno_funcion : id . '(' parametro_real ',' parametro_real ')'  (62)

	'('  shift 35
	SIMB_MAY_IGUAL  reduce 56
	SIMB_MEN_IGUAL  reduce 56
	SIMB_DISTINTO  reduce 56
	'}'  reduce 56
	';'  reduce 56
	')'  reduce 56
	'='  reduce 56
	'+'  reduce 56
	'-'  reduce 56
	'*'  reduce 56
	'/'  reduce 56
	'<'  reduce 56
	'>'  reduce 56


state 67
	factor : cte .  (57)

	.  reduce 57


state 68
	factor : '-' . cte  (58)

	cte  shift 99
	.  error


state 69
	asignacion : id SIMB_ASIGNACION expresion .  (47)
	expresion : expresion . '+' termino  (50)
	expresion : expresion . '-' termino  (51)

	'+'  shift 100
	'-'  shift 101
	';'  reduce 47


state 70
	expresion : termino .  (52)
	termino : termino . '*' factor  (53)
	termino : termino . '/' factor  (54)

	'*'  shift 102
	'/'  shift 103
	SIMB_MAY_IGUAL  reduce 52
	SIMB_MEN_IGUAL  reduce 52
	SIMB_DISTINTO  reduce 52
	'}'  reduce 52
	';'  reduce 52
	')'  reduce 52
	'='  reduce 52
	'+'  reduce 52
	'-'  reduce 52
	'<'  reduce 52
	'>'  reduce 52


state 71
	termino : factor .  (55)

	.  reduce 55


state 72
	factor : retorno_funcion .  (59)

	.  reduce 59


state 73
	parametro_real : id .  (63)

	.  reduce 63


state 74
	parametro_real : cte .  (64)

	.  reduce 64


state 75
	retorno_funcion : id '(' ')' .  (60)

	.  reduce 60


state 76
	parametro_real : '-' . cte  (65)

	cte  shift 104
	.  error


state 77
	retorno_funcion : id '(' parametro_real . ')'  (61)
	retorno_funcion : id '(' parametro_real . ',' parametro_real ')'  (62)

	','  shift 105
	')'  shift 106
	.  error


state 78
	asignacion : id ':' '=' . expresion  (49)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	expresion  goto 107
	termino  goto 70
	factor  goto 71
	retorno_funcion  goto 72


state 79
	expresion : expresion . '+' termino  (50)
	expresion : expresion . '-' termino  (51)
	expresion_booleana : expresion . comparador expresion  (74)

	SIMB_MAY_IGUAL  shift 108
	SIMB_MEN_IGUAL  shift 109
	SIMB_DISTINTO  shift 110
	'='  shift 111
	'+'  shift 100
	'-'  shift 101
	'<'  shift 112
	'>'  shift 113
	.  error

	comparador  goto 114


state 80
	condicion_if : '(' expresion_booleana . ')'  (73)

	')'  shift 115
	.  error


state 81
	then_selec : then . '{' ejecutable_for '}'  (69)
	then_selec : then . inst_ejecutable_for  (70)

	id  shift 89
	If  shift 8
	out  shift 9
	Break  shift 116
	discard  shift 13
	For  shift 14
	Continue  shift 117
	'{'  shift 118
	.  error

	inst_ejecutable  goto 119
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	inst_ejecutable_for  goto 120
	etiqueta  goto 33


state 82
	seleccion : If condicion_if cuerpo_if .  (66)

	.  reduce 66


state 83
	cuerpo_if : then_selec . Else else_selecc end_if  (67)
	cuerpo_if : then_selec . end_if  (68)

	Else  shift 121
	end_if  shift 122
	.  error


state 84
	impresion : out cadena ')' .  (82)

	.  reduce 82


state 85
	impresion : out '(' cadena . ')'  (81)
	impresion : out '(' cadena .  (83)

	')'  shift 123
	';'  reduce 83


state 86
	header_funcion : fun id '(' .  (27)

	.  reduce 27


state 87
	for_inic : id . SIMB_ASIGNACION cte  (89)

	SIMB_ASIGNACION  shift 124
	.  error


state 88
	for_continue : For '(' for_inic . ';' for_cond ';' for_act ')' for_cuerpo  (86)

	';'  shift 125
	.  error


state 89
	asignacion : id . SIMB_ASIGNACION expresion  (47)
	asignacion : id . SIMB_ASIGNACION  (48)
	asignacion : id . ':' '=' expresion  (49)
	retorno_funcion : id . '(' ')'  (60)
	retorno_funcion : id . '(' parametro_real ')'  (61)
	retorno_funcion : id . '(' parametro_real ',' parametro_real ')'  (62)
	etiqueta : id . ':'  (88)

	SIMB_ASIGNACION  shift 34
	'('  shift 35
	':'  shift 36
	.  error


state 90
	ejecutable : defer $$3 inst_ejecutable .  (41)

	.  reduce 41


state 91
	bloque_sentencias : '{' sentencia '}' .  (5)

	.  reduce 5


state 92
	dec_variables : tipo list_variables ';' .  (14)

	.  reduce 14


state 93
	list_variables : list_variables ',' id .  (20)

	.  reduce 20


state 94
	cola_funcion : ')' ':' . tipo '{' cuerpo_fun '}'  (29)

	id  shift 56
	ui8  shift 11
	f64  shift 12
	.  error

	tipo  goto 126


state 95
	parametro : tipo id .  (31)

	.  reduce 31


state 96
	dec_funcion : header_funcion parametro ',' . parametro $$2 cola_funcion  (26)

	id  shift 56
	ui8  shift 11
	f64  shift 12
	.  error

	tipo  goto 58
	parametro  goto 127


state 97
	dec_funcion : header_funcion parametro $$1 . cola_funcion  (24)

	error  shift 55
	')'  shift 57
	.  error

	cola_funcion  goto 128


state 98
	for_continue : etiqueta For '(' . for_inic ';' for_cond ';' for_act ')' for_cuerpo  (87)

	id  shift 87
	.  error

	for_inic  goto 129


state 99
	factor : '-' cte .  (58)

	.  reduce 58


state 100
	expresion : expresion '+' . termino  (50)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	termino  goto 130
	factor  goto 71
	retorno_funcion  goto 72


state 101
	expresion : expresion '-' . termino  (51)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	termino  goto 131
	factor  goto 71
	retorno_funcion  goto 72


state 102
	termino : termino '*' . factor  (53)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	factor  goto 132
	retorno_funcion  goto 72


state 103
	termino : termino '/' . factor  (54)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	factor  goto 133
	retorno_funcion  goto 72


state 104
	parametro_real : '-' cte .  (65)

	.  reduce 65


state 105
	retorno_funcion : id '(' parametro_real ',' . parametro_real ')'  (62)

	id  shift 73
	cte  shift 74
	'-'  shift 76
	.  error

	parametro_real  goto 134


state 106
	retorno_funcion : id '(' parametro_real ')' .  (61)

	.  reduce 61


state 107
	asignacion : id ':' '=' expresion .  (49)
	expresion : expresion . '+' termino  (50)
	expresion : expresion . '-' termino  (51)

	'+'  shift 100
	'-'  shift 101
	';'  reduce 49


state 108
	comparador : SIMB_MAY_IGUAL .  (76)

	.  reduce 76


state 109
	comparador : SIMB_MEN_IGUAL .  (77)

	.  reduce 77


state 110
	comparador : SIMB_DISTINTO .  (75)

	.  reduce 75


state 111
	comparador : '=' .  (78)

	.  reduce 78


state 112
	comparador : '<' .  (79)

	.  reduce 79


state 113
	comparador : '>' .  (80)

	.  reduce 80


state 114
	expresion_booleana : expresion comparador . expresion  (74)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	expresion  goto 135
	termino  goto 70
	factor  goto 71
	retorno_funcion  goto 72


state 115
	condicion_if : '(' expresion_booleana ')' .  (73)

	.  reduce 73


state 116
	inst_ejecutable_for : Break . ';'  (100)
	inst_ejecutable_for : Break . ':' id ';'  (101)

	';'  shift 136
	':'  shift 137
	.  error


state 117
	inst_ejecutable_for : Continue . ';'  (102)

	';'  shift 138
	.  error


state 118
	then_selec : then '{' . ejecutable_for '}'  (69)

	id  shift 89
	If  shift 8
	out  shift 9
	Break  shift 116
	discard  shift 13
	For  shift 14
	Continue  shift 117
	.  error

	inst_ejecutable  goto 119
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	ejecutable_for  goto 139
	inst_ejecutable_for  goto 140
	etiqueta  goto 33


state 119
	inst_ejecutable_for : inst_ejecutable .  (99)

	.  reduce 99


state 120
	then_selec : then inst_ejecutable_for .  (70)

	.  reduce 70


state 121
	cuerpo_if : then_selec Else . else_selecc end_if  (67)

	id  shift 89
	If  shift 8
	out  shift 9
	Break  shift 116
	discard  shift 13
	For  shift 14
	Continue  shift 117
	'{'  shift 141
	.  error

	inst_ejecutable  goto 119
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	else_selecc  goto 142
	inst_ejecutable_for  goto 143
	etiqueta  goto 33


state 122
	cuerpo_if : then_selec end_if .  (68)

	.  reduce 68


state 123
	impresion : out '(' cadena ')' .  (81)

	.  reduce 81


state 124
	for_inic : id SIMB_ASIGNACION . cte  (89)

	cte  shift 144
	.  error


state 125
	for_continue : For '(' for_inic ';' . for_cond ';' for_act ')' for_cuerpo  (86)

	id  shift 145
	.  error

	for_cond  goto 146


state 126
	cola_funcion : ')' ':' tipo . '{' cuerpo_fun '}'  (29)

	'{'  shift 147
	.  error


state 127
	dec_funcion : header_funcion parametro ',' parametro . $$2 cola_funcion  (26)
	$$2 : .  (25)

	.  reduce 25

	$$2  goto 148


state 128
	dec_funcion : header_funcion parametro $$1 cola_funcion .  (24)

	.  reduce 24


state 129
	for_continue : etiqueta For '(' for_inic . ';' for_cond ';' for_act ')' for_cuerpo  (87)

	';'  shift 149
	.  error


state 130
	expresion : expresion '+' termino .  (50)
	termino : termino . '*' factor  (53)
	termino : termino . '/' factor  (54)

	'*'  shift 102
	'/'  shift 103
	SIMB_MAY_IGUAL  reduce 50
	SIMB_MEN_IGUAL  reduce 50
	SIMB_DISTINTO  reduce 50
	'}'  reduce 50
	';'  reduce 50
	')'  reduce 50
	'='  reduce 50
	'+'  reduce 50
	'-'  reduce 50
	'<'  reduce 50
	'>'  reduce 50


state 131
	expresion : expresion '-' termino .  (51)
	termino : termino . '*' factor  (53)
	termino : termino . '/' factor  (54)

	'*'  shift 102
	'/'  shift 103
	SIMB_MAY_IGUAL  reduce 51
	SIMB_MEN_IGUAL  reduce 51
	SIMB_DISTINTO  reduce 51
	'}'  reduce 51
	';'  reduce 51
	')'  reduce 51
	'='  reduce 51
	'+'  reduce 51
	'-'  reduce 51
	'<'  reduce 51
	'>'  reduce 51


state 132
	termino : termino '*' factor .  (53)

	.  reduce 53


state 133
	termino : termino '/' factor .  (54)

	.  reduce 54


state 134
	retorno_funcion : id '(' parametro_real ',' parametro_real . ')'  (62)

	')'  shift 150
	.  error


state 135
	expresion : expresion . '+' termino  (50)
	expresion : expresion . '-' termino  (51)
	expresion_booleana : expresion comparador expresion .  (74)

	'+'  shift 100
	'-'  shift 101
	')'  reduce 74


state 136
	inst_ejecutable_for : Break ';' .  (100)

	.  reduce 100


state 137
	inst_ejecutable_for : Break ':' . id ';'  (101)

	id  shift 151
	.  error


state 138
	inst_ejecutable_for : Continue ';' .  (102)

	.  reduce 102


state 139
	then_selec : then '{' ejecutable_for . '}'  (69)
	ejecutable_for : ejecutable_for . inst_ejecutable_for  (97)

	id  shift 89
	If  shift 8
	out  shift 9
	Break  shift 116
	discard  shift 13
	For  shift 14
	Continue  shift 117
	'}'  shift 152
	.  error

	inst_ejecutable  goto 119
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	inst_ejecutable_for  goto 153
	etiqueta  goto 33


state 140
	ejecutable_for : inst_ejecutable_for .  (98)

	.  reduce 98


state 141
	else_selecc : '{' . ejecutable_for '}'  (71)

	id  shift 89
	If  shift 8
	out  shift 9
	Break  shift 116
	discard  shift 13
	For  shift 14
	Continue  shift 117
	.  error

	inst_ejecutable  goto 119
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	ejecutable_for  goto 154
	inst_ejecutable_for  goto 140
	etiqueta  goto 33


state 142
	cuerpo_if : then_selec Else else_selecc . end_if  (67)

	end_if  shift 155
	.  error


state 143
	else_selecc : inst_ejecutable_for .  (72)

	.  reduce 72


state 144
	for_inic : id SIMB_ASIGNACION cte .  (89)

	.  reduce 89


state 145
	for_cond : id . comparador expresion  (90)

	SIMB_MAY_IGUAL  shift 108
	SIMB_MEN_IGUAL  shift 109
	SIMB_DISTINTO  shift 110
	'='  shift 111
	'<'  shift 112
	'>'  shift 113
	.  error

	comparador  goto 156


state 146
	for_continue : For '(' for_inic ';' for_cond . ';' for_act ')' for_cuerpo  (86)

	';'  shift 157
	.  error


state 147
	cola_funcion : ')' ':' tipo '{' . cuerpo_fun '}'  (29)

	error  shift 6
	id  shift 7
	If  shift 8
	out  shift 9
	fun  shift 10
	ui8  shift 11
	f64  shift 12
	discard  shift 13
	For  shift 14
	defer  shift 15
	.  error

	sentencia  goto 158
	declarativa  goto 19
	ejecutable  goto 20
	dec_variables  goto 21
	dec_funcion  goto 22
	tipo  goto 23
	list_variables  goto 24
	header_funcion  goto 25
	cuerpo_fun  goto 159
	inst_ejecutable  goto 26
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	etiqueta  goto 33


state 148
	dec_funcion : header_funcion parametro ',' parametro $$2 . cola_funcion  (26)

	error  shift 55
	')'  shift 57
	.  error

	cola_funcion  goto 160


state 149
	for_continue : etiqueta For '(' for_inic ';' . for_cond ';' for_act ')' for_cuerpo  (87)

	id  shift 145
	.  error

	for_cond  goto 161


state 150
	retorno_funcion : id '(' parametro_real ',' parametro_real ')' .  (62)

	.  reduce 62


state 151
	inst_ejecutable_for : Break ':' id . ';'  (101)

	';'  shift 162
	.  error


state 152
	then_selec : then '{' ejecutable_for '}' .  (69)

	.  reduce 69


state 153
	ejecutable_for : ejecutable_for inst_ejecutable_for .  (97)

	.  reduce 97


state 154
	else_selecc : '{' ejecutable_for . '}'  (71)
	ejecutable_for : ejecutable_for . inst_ejecutable_for  (97)

	id  shift 89
	If  shift 8
	out  shift 9
	Break  shift 116
	discard  shift 13
	For  shift 14
	Continue  shift 117
	'}'  shift 163
	.  error

	inst_ejecutable  goto 119
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	inst_ejecutable_for  goto 153
	etiqueta  goto 33


state 155
	cuerpo_if : then_selec Else else_selecc end_if .  (67)

	.  reduce 67


state 156
	for_cond : id comparador . expresion  (90)

	id  shift 66
	cte  shift 67
	'-'  shift 68
	.  error

	expresion  goto 164
	termino  goto 70
	factor  goto 71
	retorno_funcion  goto 72


state 157
	for_continue : For '(' for_inic ';' for_cond ';' . for_act ')' for_cuerpo  (86)

	cte  shift 165
	'+'  shift 166
	'-'  shift 167
	.  error

	for_act  goto 168
	mas_o_menos  goto 169


state 158
	sentencia : sentencia . declarativa  (10)
	sentencia : sentencia . ejecutable  (11)
	cuerpo_fun : sentencia . Return '(' expresion ')' ';'  (33)
	cuerpo_fun : sentencia . Return '(' expresion ';'  (34)
	cuerpo_fun : sentencia . Return expresion ';'  (35)
	cuerpo_fun : sentencia . Return expresion ')' ';'  (36)
	cuerpo_fun : sentencia . Return expresion  (37)
	cuerpo_fun : sentencia . Return '(' expresion ')'  (38)

	error  shift 6
	id  shift 7
	If  shift 8
	out  shift 9
	fun  shift 10
	Return  shift 170
	ui8  shift 11
	f64  shift 12
	discard  shift 13
	For  shift 14
	defer  shift 15
	.  error

	declarativa  goto 49
	ejecutable  goto 50
	dec_variables  goto 21
	dec_funcion  goto 22
	tipo  goto 23
	list_variables  goto 24
	header_funcion  goto 25
	inst_ejecutable  goto 26
	asignacion  goto 27
	seleccion  goto 28
	impresion  goto 29
	invocar_fun  goto 30
	for_continue  goto 31
	retorno_funcion  goto 32
	etiqueta  goto 33


state 159
	cola_funcion : ')' ':' tipo '{' cuerpo_fun . '}'  (29)

	'}'  shift 171
	.  error


state 160
	dec_funcion : header_funcion parametro ',' parametro $$2 cola_funcion .  (26)

	.  reduce 26

